Web Inspector: capture async stack trace when workers/main context posts a message https://bugs.webkit.org/show_bug.cgi?id=167084 <rdar://problem/30033673>

Reviewed by Brian Burg.

Source/JavaScriptCore:

* inspector/agents/InspectorDebuggerAgent.h:
Add `PostMessage` async call type.

Source/WebCore:

Add instrumentation to DOMWindow to support showing asynchronous
stack traces when the debugger pauses in a MessageEvent handler.

Test: inspector/debugger/async-stack-trace.html

* inspector/InspectorInstrumentation.cpp:
(WebCore::InspectorInstrumentation::didPostMessageImpl):
(WebCore::InspectorInstrumentation::didFailPostMessageImpl):
(WebCore::InspectorInstrumentation::willDispatchPostMessageImpl):
(WebCore::InspectorInstrumentation::didDispatchPostMessageImpl):

* inspector/InspectorInstrumentation.h:
(WebCore::InspectorInstrumentation::didPostMessage):
(WebCore::InspectorInstrumentation::didFailPostMessage):
(WebCore::InspectorInstrumentation::willDispatchPostMessage):
(WebCore::InspectorInstrumentation::didDispatchPostMessage):

* inspector/PageDebuggerAgent.cpp:
(WebCore::PageDebuggerAgent::didClearAsyncStackTraceData):
(WebCore::PageDebuggerAgent::didPostMessage):
(WebCore::PageDebuggerAgent::didFailPostMessage):
(WebCore::PageDebuggerAgent::willDispatchPostMessage):
(WebCore::PageDebuggerAgent::didDispatchPostMessage):
* inspector/PageDebuggerAgent.h:

* page/DOMWindow.cpp:
(WebCore::DOMWindow::postMessage):
(WebCore::DOMWindow::postMessageTimerFired):

LayoutTests:

Add a test to check for asynchronous stack trace data when the debugger
pauses inside a MessageEvent handler.

* inspector/debugger/async-stack-trace-expected.txt:
* inspector/debugger/async-stack-trace.html:
* inspector/debugger/resources/postMessage-echo.html: Added.


Canonical link: https://commits.webkit.org/191957@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220299 268f45cc-cd09-0410-ab3c-d52691b4dbfc