Source/JavaScriptCore/inspector/agents/InspectorDebuggerAgent.h
@@ -94,6 +94,7 @@ public:
     enum class AsyncCallType {
         DOMTimer,
         EventListener,
+        PostMessage,
         RequestAnimationFrame,
     };
 
